<resources>
    <string name="app_name">Motor Vahan</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Xyz Kumar</string>
    <string name="nav_header_subtitle">xyz.kumaro@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyBOlojLzUDEVc_4GBixP35jFDheOZqHxNk</string>
<!--    <string name="google_maps_key">AIzaSyDJX1YgFvgKNjGZrLX74e7DL-7og2UWZw8</string>-->

    <string name="menu_home">Dashboard</string>
    <string name="menu_live_tracking">Live Tracking</string>
    <string name="menu_stoppage_summary">Stoppage Summary</string>
    <string name="menu_vehicle_status">Vehicle Status</string>
    <string name="menu_travel_summary">Travel Summary</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_fuel_graph">Fuel Graph</string>
    <string name="menu_distance_summary">Distance Summary</string>
    <string name="menu_setting">Setting</string>

    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginviauser">Login</string>
    <string name="loginviaotp">Login via OTP</string>
    <string name="register">Register</string>
    <string name="callus">Call Us</string>
    <string name="login">Login</string>
    <string name="getotp">Get OTP</string>
    <string name="toolbar_title">Variant</string>
    <string name="toolbar_login">Login</string>
    <string name="toolbar_newuserdetail">New User Details</string>
    <string name="upload">Upload</string>
    <string name="skip">Skip</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_total_list">Map</string>
    <string name="name">name</string>
    <string name="address">address</string>


    <string name="title_home">Dashboard</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_holidays">Holidays</string>
    <string name="update_eta">Update Eta</string>
    <string name="title_logout">logout</string>
    <string name="title_v_status">Status</string>
    <string name="title_t_status">Summary</string>
    <string name="title_s_status">Stoppage</string>
    <string name="title_alert">Alert</string>
    <string name="v_number">Vehicle Number</string>
    <string name="location">Location</string>
    <string name="action_notifications">notification</string>
    <string name="menu_changepass">Change Password</string>

</resources>
