<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dashboard_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_live_tracking"
            android:icon="@drawable/location_icon"
            android:title="@string/menu_live_tracking" />
        <item
            android:id="@+id/nav_vehicle_status"
            android:icon="@drawable/car_icon"
            android:title="@string/menu_vehicle_status" />
        <item
            android:id="@+id/nav_travel_summary"
            android:icon="@drawable/travel_icon"
            android:title="@string/menu_travel_summary" />
        <item
            android:id="@+id/nav_stoppage_summary"
            android:icon="@drawable/stoppage_icon"
            android:title="@string/menu_stoppage_summary" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/alert_icon"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/nav_distance_summary"
            android:icon="@drawable/distance_icon"
            android:title="@string/menu_distance_summary" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_changepass"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_changepass" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>
    <group android:id="@+id/group_logout">
        <item
            android:id="@+id/nav_log"
            android:icon="@mipmap/logout_img"
            android:title="Logout" />
    </group>
</menu>
